--- a/input/config/theme.square-next.config.json
+++ b/input/config/theme.square-next.config.json
@@ -18,14 +18,14 @@
         "heroHeight": "40vh",
         "heroBg": "#000000",
         "displayHeroImage": true,
-        "uploadHero": "media/website/foppies-big.jpeg",
+        "uploadHero": "media/website/header-next-4.png",
         "uploadHeroAlt": "",
         "uploadHeroCaption": "",
-        "heroOverlay": "rgba(0, 0, 0, 0.2)",
+        "heroOverlay": "rgba(0,0,0,0.33)",
         "imageEffects": false,
         "imageFilter": "grayscale",
         "imageFilterValue": "8",
-        "textHero": "<h1>Welcome to the next chapter of bits</h1>\n<p>I, for one, welome our AI overlords!</p>",
+        "textHero": "<h1>Welcome to the next chapter of bits</h1>\n<p>Stable Diffusion and other AI tools for digital artists from the future.</p>",
         "heroTextColor": "#FFFFFF",
         "heroBorderColor": "rgba(255, 255, 255, 0.2)",
         "primaryColor": "#5F00B8",
